--- a/profile.html
+++ b/profile.html
@@ -51,28 +51,29 @@
     Якщо ви використовуєте наш Telegram-бот, цей спосіб автоматично синхронізує ваш PRO-статус.
   </p>
 
-  <!-- 🔹 1. Функція має бути ВИЩЕ за віджет -->
+    <!-- 🔹 Глобальна функція Telegram авторизації -->
   <script>
-    function onTelegramAuth(user) {
+    window.onTelegramAuth = function(user) {
       if (!user) return;
       console.log("📩 Telegram повернув користувача:", user);
-      // створюємо URL з параметрами
       const params = new URLSearchParams(user).toString();
-      // редіректимо назад у /profile (твій реальний шлях)
-      window.location.href = "https://kino-site.pages.dev/profile?" + params;
-    }
+      // невелика затримка, щоб не закривалося миттєво
+      setTimeout(() => {
+        window.location.href = "https://kino-site.pages.dev/profile?" + params;
+      }, 300);
+    };
   </script>
 
-  <!-- 🔹 2. Сам Telegram Login Widget -->
-  <script async src="https://telegram.org/js/telegram-widget.js?22"
-        data-telegram-login="RelaxBox_UA_bot"
-        data-size="large"
-        data-userpic="false"
-        data-request-access="write"
-        data-radius="8"
-        data-onauth="onTelegramAuth">
-</script>
-</div>
+  <!-- 🔹 Telegram Login Widget -->
+  <script src="https://telegram.org/js/telegram-widget.js?22"
+          data-telegram-login="RelaxBox_UA_bot"
+          data-size="large"
+          data-userpic="false"
+          data-request-access="write"
+          data-radius="8"
+          data-onauth="onTelegramAuth"
+          defer>
+  </script>
 
 
 
