--- a/profile.html
+++ b/profile.html
@@ -2,6 +2,14 @@
 <html lang="uk">
 <head>
   <meta charset="UTF-8" />
+  <meta http-equiv="Content-Security-Policy"
+      content="default-src * 'self' data: blob: https: http:;
+                script-src 'self' 'unsafe-inline' 'unsafe-eval' https://telegram.org https://oauth.telegram.org;
+                frame-src https://oauth.telegram.org https://kino-site.pages.dev;
+                connect-src *;
+                style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+                font-src https://fonts.gstatic.com;">
+
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Мій кабінет — KinoSite</title>
   <link rel="stylesheet" href="style.css" />
