--- a/profile.html
+++ b/profile.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="Content-Security-Policy"
-      content="default-src * 'self' data: blob: https: http:;
-                script-src 'self' 'unsafe-inline' 'unsafe-eval' https://telegram.org https://oauth.telegram.org;
-                frame-src https://oauth.telegram.org https://kino-site.pages.dev;
-                connect-src *;
-                style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
-                font-src https://fonts.gstatic.com;">
+<meta charset="UTF-8" />
+<meta http-equiv="Content-Security-Policy"
+      content="
+        default-src * 'self' data: blob: https: http:;
+        script-src 'self' 'unsafe-inline' 'unsafe-eval'
+          https://telegram.org
+          https://oauth.telegram.org
+          https://cdn.jsdelivr.net
+          https://cdn.jsdelivr.net/npm/@supabase/;
+        frame-src https://oauth.telegram.org https://kino-site.pages.dev;
+        connect-src *;
+        style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+        font-src https://fonts.gstatic.com;
+      ">
+
 
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Мій кабінет — KinoSite</title>
