--- a/profile.html
+++ b/profile.html
@@ -11,10 +11,12 @@
           https://cdn.jsdelivr.net
           https://cdn.jsdelivr.net/npm/@supabase/;
         frame-src https://oauth.telegram.org https://kino-site.pages.dev;
+        frame-ancestors https://oauth.telegram.org https://kino-site.pages.dev;
         connect-src *;
         style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
         font-src https://fonts.gstatic.com;
       ">
+
 
 
   <meta name="viewport" content="width=device-width,initial-scale=1" />
