--- a/profile.html
+++ b/profile.html
@@ -61,37 +61,21 @@
     <button class="btn btn-primary" id="email-login-btn">Надіслати посилання для входу</button>
   </div>
 </div>
-<!-- === Вхід через Telegram === -->
+<!-- === Вхід через Telegram (iframe-версія, стабільна у всіх браузерах) === -->
 <div class="card">
   <h3>Увійти через Telegram</h3>
   <p class="muted">
     Якщо ви використовуєте наш Telegram-бот, цей спосіб автоматично синхронізує ваш PRO-статус.
   </p>
 
-    <!-- 🔹 Глобальна функція Telegram авторизації -->
-  <script>
-    window.onTelegramAuth = function(user) {
-      if (!user) return;
-      console.log("📩 Telegram повернув користувача:", user);
-      const params = new URLSearchParams(user).toString();
-      // невелика затримка, щоб не закривалося миттєво
-      setTimeout(() => {
-        window.location.href = "https://kino-site.pages.dev/profile?" + params;
-      }, 300);
-    };
-  </script>
-
-  <!-- 🔹 Telegram Login Widget -->
-  <script src="https://telegram.org/js/telegram-widget.js?22"
-          data-telegram-login="RelaxBox_UA_bot"
-          data-size="large"
-          data-userpic="false"
-          data-request-access="write"
-          data-radius="8"
-          data-onauth="onTelegramAuth"
-          defer>
-  </script>
-
+  <iframe
+    src="https://oauth.telegram.org/embed/RelaxBox_UA_bot?origin=https://kino-site.pages.dev&request_access=write"
+    width="320"
+    height="80"
+    frameborder="0"
+    scrolling="no">
+  </iframe>
+</div>
 
 
 
