--- a/profile.html
+++ b/profile.html
@@ -66,14 +66,22 @@
   <div class="card">
     <h3>Увійти через Telegram</h3>
     <p class="muted">Якщо ви використовуєте наш Telegram-бот, цей спосіб автоматично синхронізує ваш PRO-статус.</p>
+<script>
+  // 🟣 Telegram вбудований callback
+  function onTelegramAuth(user) {
+    console.log("✅ Telegram повернув користувача через onauth:", user);
+    handleTelegramUser(user);
+  }
+</script>
+<iframe
+  src="https://oauth.telegram.org/embed/RelaxBox_UA_bot?origin=https://kino-site.pages.dev&request_access=write"
+  data-onauth="onTelegramAuth(user)"
+  width="320"
+  height="80"
+  frameborder="0"
+  scrolling="no">
+</iframe>
 
-    <iframe
-      src="https://oauth.telegram.org/embed/RelaxBox_UA_bot?origin=https://kino-site.pages.dev&request_access=write"
-      width="320"
-      height="80"
-      frameborder="0"
-      scrolling="no">
-    </iframe>
   </div>
 </main>
 
