--- a/profile.html
+++ b/profile.html
@@ -62,43 +62,36 @@
     </div>
   </div>
 
-  <!-- Авторизація Telegram -->
-  <div class="card">
-    <h3>Увійти через Telegram</h3>
-    <p class="muted">Якщо ви використовуєте наш Telegram-бот, цей спосіб автоматично синхронізує ваш PRO-статус.</p>
+<!-- Авторизація Telegram -->
+<div class="card">
+  <h3>Увійти через Telegram</h3>
+  <p class="muted">Якщо ви використовуєте наш Telegram-бот, цей спосіб автоматично синхронізує ваш PRO-статус.</p>
 
-<!-- 🔹 Telegram iframe (origin підставляється динамічно) -->
-<iframe
-  id="tg-frame"
-  data-onauth="onTelegramAuth(user)"
-  width="320"
-  height="80"
-  frameborder="0"
-  scrolling="no">
-</iframe>
+  <iframe
+    id="tg-frame"
+    data-onauth="onTelegramAuth(user)"
+    width="320"
+    height="80"
+    frameborder="0"
+    scrolling="no">
+  </iframe>
 
-<script>
-  // ✅ Динамічно підставляємо правильний origin
-  const tgFrame = document.getElementById("tg-frame");
-  const siteOrigin = window.location.origin; // автоматично буде https://kino-site.pages.dev
-  tgFrame.src = `https://oauth.telegram.org/embed/RelaxBox_UA_bot?origin=${siteOrigin}&request_access=write`;
-</script>
+  <script>
+    // 🟢 Динамічно підставляємо актуальний origin (щоб не було "Origin required")
+    const siteOrigin = window.location.origin;
+    document.getElementById("tg-frame").src =
+      `https://oauth.telegram.org/embed/RelaxBox_UA_bot?origin=${siteOrigin}&request_access=write`;
 
-<script>
-  function onTelegramAuth(user) {
-    console.log("✅ Telegram повернув користувача через onauth:", user);
-    const data = user.auth_data || user;
-    if (data?.id) {
-      handleTelegramUser(data);
-    } else {
-      console.warn("⚠️ Не вдалося знайти ID користувача у відповіді Telegram:", user);
+    // 🔹 Telegram callback
+    function onTelegramAuth(user) {
+      console.log("✅ Telegram повернув користувача через onauth:", user);
+      const data = user.auth_data || user;
+      if (data?.id) handleTelegramUser(data);
+      else console.warn("⚠️ Не вдалося знайти ID користувача у відповіді Telegram:", user);
     }
-  }
-</script>
+  </script>
+</div>
 
-
-
-  </div>
 </main>
 
 <footer style="text-align:center;color:#8a8f98;margin:32px 0">© 2025 KinoSite</footer>
