--- a/profile.html
+++ b/profile.html
@@ -79,13 +79,6 @@
           data-onauth="onTelegramAuth(user)">
   </script>
 
-  <script>
-    // 🔹 Простий callback — Telegram повертає дані сюди
-    function onTelegramAuth(user) {
-      console.log("✅ Telegram авторизував користувача:", user);
-      handleTelegramUser(user);
-    }
-  </script>
 </div>
 
 
@@ -197,6 +190,24 @@ if (okOrigin && payload?.id) {
       console.error(err);
       document.getElementById("pro-status").innerText = "⚠️ Помилка перевірки PRO";
     }
+  }
+</script>
+<script>
+  // 🟢 Функція, яку викликає Telegram Login Widget
+  function onTelegramAuth(user) {
+    console.log("✅ Telegram авторизував користувача:", user);
+
+    // Зберігаємо ID користувача в localStorage
+    localStorage.setItem("telegram_user", JSON.stringify(user));
+
+    // Відображаємо ім’я користувача на сторінці
+    const card = document.querySelector(".card");
+    card.innerHTML = `
+      <h3>Вітаємо, ${user.first_name}!</h3>
+      <p>Ваш Telegram ID: ${user.id}</p>
+      <p>Статус: <b>PRO синхронізовано</b> 💎</p>
+      <img src="${user.photo_url}" alt="avatar" style="width:100px;border-radius:50%;margin-top:10px;">
+    `;
   }
 </script>
 
